# zkevm-circuits

./: Cargo.toml
aggregator/: Cargo.toml
aggregator/src/: util.rs
bus-mapping/: Cargo.toml
bus-mapping/src/: circuit_input_builder.rs  lib.rs  mock.rs  operation.rs  precompile.rs
bus-mapping/src/circuit_input_builder/: access.rs  block.rs  input_state_ref.rs  transaction.rs
circuit-benchmarks/: Cargo.toml
circuit-benchmarks/src/: super_circuit.rs
eth-types/: Cargo.toml
eth-types/src/: geth_types.rs  lib.rs
gadgets/src/: less_than.rs  util.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
light-client-poc/: Cargo.toml
mock/: Cargo.toml
mock/src/: block.rs  transaction.rs
prover/: Cargo.toml
testool/: Cargo.toml
testool/src/statetest/: executor.rs  json.rs  spec.rs  yaml.rs
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/: bytecode_circuit.rs  copy_circuit.rs  ecc_circuit.rs  evm_circuit.rs  exp_circuit.rs  init_state_circuit.rs  instance.rs  keccak_circuit.rs  lib.rs  modexp_circuit.rs  mpt_circuit.rs  pi_circuit.rs  poseidon_circuit.rs  rlp_circuit_fsm.rs  sig_circuit.rs  state_circuit.rs  super_circuit.rs  table.rs  test_util.rs  tx_circuit.rs  util.rs
zkevm-circuits/src/bytecode_circuit/: bytecode_unroller.rs  circuit.rs  dev.rs
zkevm-circuits/src/circuit_tools/: gadgets.rs
zkevm-circuits/src/copy_circuit/: dev.rs  test.rs
zkevm-circuits/src/ecc_circuit/: dev.rs
zkevm-circuits/src/evm_circuit/: execution.rs  param.rs  step.rs  table.rs  util.rs
zkevm-circuits/src/exp_circuit/: dev.rs
(+58 files in other folders)
